include/dss_capi.h

    DSS_CAPI_DLL double Solution_Get_Frequency(void);
    DSS_CAPI_DLL int32_t Solution_Get_Hour(void);
    DSS_CAPI_DLL int32_t Solution_Get_Iterations(void);
    DSS_CAPI_DLL double Solution_Get_LoadMult(void);
    DSS_CAPI_DLL int32_t Solution_Get_MaxIterations(void);
    DSS_CAPI_DLL int32_t Solution_Get_Mode(void);
    DSS_CAPI_DLL int32_t Solution_Get_Number(void);
    DSS_CAPI_DLL int32_t Solution_Get_Random(void);
    DSS_CAPI_DLL double Solution_Get_Seconds(void);
    DSS_CAPI_DLL double Solution_Get_StepSize(void);
    DSS_CAPI_DLL double Solution_Get_Tolerance(void);
    DSS_CAPI_DLL int32_t Solution_Get_Year(void);
    DSS_CAPI_DLL void Solution_Set_Frequency(double Value);
    DSS_CAPI_DLL void Solution_Set_Hour(int32_t Value);
    DSS_CAPI_DLL void Solution_Set_LoadMult(double Value);
    DSS_CAPI_DLL void Solution_Set_MaxIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_Set_Mode(int32_t Mode);
    DSS_CAPI_DLL void Solution_Set_Number(int32_t Value);
    DSS_CAPI_DLL void Solution_Set_Random(int32_t Random);
    DSS_CAPI_DLL void Solution_Set_Seconds(double Value);
    DSS_CAPI_DLL void Solution_Set_StepSize(double Value);
    DSS_CAPI_DLL void Solution_Set_Tolerance(double Value);
    DSS_CAPI_DLL void Solution_Set_Year(int32_t Value);
    DSS_CAPI_DLL void Solution_Solve(void);
    DSS_CAPI_DLL char* Solution_Get_ModeID(void);
    DSS_CAPI_DLL int32_t Solution_Get_LoadModel(void);
    DSS_CAPI_DLL void Solution_Set_LoadModel(int32_t Value);
    DSS_CAPI_DLL char* Solution_Get_LDCurve(void);
    DSS_CAPI_DLL void Solution_Set_LDCurve(char* Value);
    DSS_CAPI_DLL double Solution_Get_pctGrowth(void);
    DSS_CAPI_DLL void Solution_Set_pctGrowth(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_AddType(void);
    DSS_CAPI_DLL void Solution_Set_AddType(int32_t Value);
    DSS_CAPI_DLL double Solution_Get_GenkW(void);
    DSS_CAPI_DLL void Solution_Set_GenkW(double Value);
    DSS_CAPI_DLL double Solution_Get_GenPF(void);
    DSS_CAPI_DLL void Solution_Set_GenPF(double Value);
    DSS_CAPI_DLL double Solution_Get_Capkvar(void);
    DSS_CAPI_DLL void Solution_Set_Capkvar(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_Algorithm(void);
    DSS_CAPI_DLL void Solution_Set_Algorithm(int32_t Value);
    DSS_CAPI_DLL int32_t Solution_Get_ControlMode(void);
    DSS_CAPI_DLL void Solution_Set_ControlMode(int32_t Value);
    DSS_CAPI_DLL double Solution_Get_GenMult(void);
    DSS_CAPI_DLL void Solution_Set_GenMult(double Value);
    DSS_CAPI_DLL char* Solution_Get_DefaultDaily(void);
    DSS_CAPI_DLL char* Solution_Get_DefaultYearly(void);
    DSS_CAPI_DLL void Solution_Set_DefaultDaily(char* Value);
    DSS_CAPI_DLL void Solution_Set_DefaultYearly(char* Value);
    DSS_CAPI_DLL void Solution_Get_EventLog(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double Solution_Get_dblHour(void);
    DSS_CAPI_DLL void Solution_Set_dblHour(double Value);
    DSS_CAPI_DLL void Solution_Set_StepsizeHr(double Value);
    DSS_CAPI_DLL void Solution_Set_StepsizeMin(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_ControlIterations(void);
    DSS_CAPI_DLL int32_t Solution_Get_MaxControlIterations(void);
    DSS_CAPI_DLL void Solution_Sample_DoControlActions(void);
    DSS_CAPI_DLL void Solution_Set_ControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_Set_MaxControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_CheckFaultStatus(void);
    DSS_CAPI_DLL void Solution_SolveDirect(void);
    DSS_CAPI_DLL void Solution_SolveNoControl(void);
    DSS_CAPI_DLL void Solution_SolvePflow(void);
    DSS_CAPI_DLL void Solution_SolvePlusControl(void);
    DSS_CAPI_DLL void Solution_SolveSnap(void);
    DSS_CAPI_DLL void Solution_CheckControls(void);
    DSS_CAPI_DLL void Solution_InitSnap(void);
    DSS_CAPI_DLL uint16_t Solution_Get_SystemYChanged(void);
    DSS_CAPI_DLL void Solution_BuildYMatrix(int32_t BuildOption, int32_t AllocateVI);
    DSS_CAPI_DLL void Solution_DoControlActions(void);
    DSS_CAPI_DLL void Solution_SampleControlDevices(void);
    DSS_CAPI_DLL uint16_t Solution_Get_Converged(void);
    DSS_CAPI_DLL void Solution_Set_Converged(uint16_t Value);
    DSS_CAPI_DLL int32_t Solution_Get_Totaliterations(void);
    DSS_CAPI_DLL int32_t Solution_Get_MostIterationsDone(void);
    DSS_CAPI_DLL uint16_t Solution_Get_ControlActionsDone(void);
    DSS_CAPI_DLL void Solution_Set_ControlActionsDone(uint16_t Value);
    DSS_CAPI_DLL void Solution_Cleanup(void);
    DSS_CAPI_DLL void Solution_FinishTimeStep(void);
    DSS_CAPI_DLL double Solution_Get_Process_Time(void);
    DSS_CAPI_DLL double Solution_Get_Total_Time(void);
    DSS_CAPI_DLL void Solution_Set_Total_Time(double Value);
    DSS_CAPI_DLL double Solution_Get_Time_of_Step(void);
    DSS_CAPI_DLL double Solution_Get_IntervalHrs(void);
    DSS_CAPI_DLL void Solution_Set_IntervalHrs(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_MinIterations(void);
    DSS_CAPI_DLL void Solution_Set_MinIterations(int32_t Value);