src/CAPI_Solution.pas

UNIT CAPI_Solution;
{$inline on}

INTERFACE

USES CAPI_Utils;

function Solution_Get_Frequency():Double;cdecl;
function Solution_Get_Hour():Integer;cdecl;
function Solution_Get_Iterations():Integer;cdecl;
function Solution_Get_LoadMult():Double;cdecl;
function Solution_Get_MaxIterations():Integer;cdecl;
function Solution_Get_Mode():Integer;cdecl;
function Solution_Get_Number():Integer;cdecl;
function Solution_Get_Random():Integer;cdecl;
function Solution_Get_Seconds():Double;cdecl;
function Solution_Get_StepSize():Double;cdecl;
function Solution_Get_Tolerance():Double;cdecl;
function Solution_Get_Year():Integer;cdecl;
procedure Solution_Set_Frequency(Value: Double);cdecl;
procedure Solution_Set_Hour(Value: Integer);cdecl;
procedure Solution_Set_LoadMult(Value: Double);cdecl;
procedure Solution_Set_MaxIterations(Value: Integer);cdecl;
procedure Solution_Set_Mode(Mode: Integer);cdecl;
procedure Solution_Set_Number(Value: Integer);cdecl;
procedure Solution_Set_Random(Random: Integer);cdecl;
procedure Solution_Set_Seconds(Value: Double);cdecl;
procedure Solution_Set_StepSize(Value: Double);cdecl;
procedure Solution_Set_Tolerance(Value: Double);cdecl;
procedure Solution_Set_Year(Value: Integer);cdecl;
procedure Solution_Solve();cdecl;
function Solution_Get_ModeID():PAnsiChar;cdecl;
function Solution_Get_LoadModel():Integer;cdecl;
procedure Solution_Set_LoadModel(Value: Integer);cdecl;
function Solution_Get_LDCurve():PAnsiChar;cdecl;
procedure Solution_Set_LDCurve(const Value: PAnsiChar);cdecl;
function Solution_Get_pctGrowth():Double;cdecl;
procedure Solution_Set_pctGrowth(Value: Double);cdecl;
function Solution_Get_AddType():Integer;cdecl;
procedure Solution_Set_AddType(Value: Integer);cdecl;
function Solution_Get_GenkW():Double;cdecl;
procedure Solution_Set_GenkW(Value: Double);cdecl;
function Solution_Get_GenPF():Double;cdecl;
procedure Solution_Set_GenPF(Value: Double);cdecl;
function Solution_Get_Capkvar():Double;cdecl;
procedure Solution_Set_Capkvar(Value: Double);cdecl;
function Solution_Get_Algorithm():Integer;cdecl;
procedure Solution_Set_Algorithm(Value: Integer);cdecl;
function Solution_Get_ControlMode():Integer;cdecl;
procedure Solution_Set_ControlMode(Value: Integer);cdecl;
function Solution_Get_GenMult():Double;cdecl;
procedure Solution_Set_GenMult(Value: Double);cdecl;
function Solution_Get_DefaultDaily():PAnsiChar;cdecl;
function Solution_Get_DefaultYearly():PAnsiChar;cdecl;
procedure Solution_Set_DefaultDaily(const Value: PAnsiChar);cdecl;
procedure Solution_Set_DefaultYearly(const Value: PAnsiChar);cdecl;
PROCEDURE Solution_Get_EventLog(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
function Solution_Get_dblHour():Double;cdecl;
procedure Solution_Set_dblHour(Value: Double);cdecl;
procedure Solution_Set_StepsizeHr(Value: Double);cdecl;
procedure Solution_Set_StepsizeMin(Value: Double);cdecl;
function Solution_Get_ControlIterations():Integer;cdecl;
function Solution_Get_MaxControlIterations():Integer;cdecl;
procedure Solution_Sample_DoControlActions();cdecl;
procedure Solution_Set_ControlIterations(Value: Integer);cdecl;
procedure Solution_Set_MaxControlIterations(Value: Integer);cdecl;
procedure Solution_CheckFaultStatus();cdecl;
procedure Solution_SolveDirect();cdecl;
procedure Solution_SolveNoControl();cdecl;
procedure Solution_SolvePflow();cdecl;
procedure Solution_SolvePlusControl();cdecl;
procedure Solution_SolveSnap();cdecl;
procedure Solution_CheckControls();cdecl;
procedure Solution_InitSnap();cdecl;
function Solution_Get_SystemYChanged():WordBool;cdecl;
procedure Solution_BuildYMatrix(BuildOption, AllocateVI: Integer);cdecl;
procedure Solution_DoControlActions();cdecl;
procedure Solution_SampleControlDevices();cdecl;
function Solution_Get_Converged():WordBool;cdecl;
procedure Solution_Set_Converged(Value: WordBool);cdecl;
function Solution_Get_Totaliterations():Integer;cdecl;
function Solution_Get_MostIterationsDone():Integer;cdecl;
function Solution_Get_ControlActionsDone():WordBool;cdecl;
procedure Solution_Set_ControlActionsDone(Value: WordBool);cdecl;
procedure Solution_Cleanup();cdecl;
procedure Solution_FinishTimeStep();cdecl;
function Solution_Get_Process_Time():Double;cdecl;
function Solution_Get_Total_Time():Double;cdecl;
procedure Solution_Set_Total_Time(Value: Double);cdecl;
function Solution_Get_Time_of_Step():Double;cdecl;
function Solution_Get_IntervalHrs():Double;cdecl;
procedure Solution_Set_IntervalHrs(Value: Double);cdecl;
function Solution_Get_MinIterations():Integer;cdecl;
procedure Solution_Set_MinIterations(Value: Integer);cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSGlobals, Math, LoadShape, Utilities, YMatrix, SolutionAlgs, Solution;

function Solution_Get_Frequency():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Frequency
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Hour():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.DynaVars.intHour
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Iterations():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Iteration
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_LoadMult():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.LoadMultiplier
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
function Solution_Get_MaxIterations():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.MaxIterations
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Mode():Integer;cdecl;
begin
     //If ActiveCircuit <> Nil Then Result := GetSolutionModeID      changed to integer 8/16/00
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Mode
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Number():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.NumberOfTimes
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Random():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.RandomType
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Seconds():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.dynavars.t
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
function Solution_Get_StepSize():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.dynavars.h
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Tolerance():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.ConvergenceTolerance
     Else Result := 0.0;
end;
//------------------------------------------------------------------------------
function Solution_Get_Year():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Year
     Else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Frequency(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.Frequency  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Hour(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then With  ActiveCircuit.Solution Do Begin
        DynaVars.intHour  := Value;
        Update_dblHour;
     End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_LoadMult(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.LoadMultiplier  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_MaxIterations(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.MaxIterations  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Mode(Mode: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.Mode := Mode; //InterpretSolveMode(Value);
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Number(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.NumberOfTimes  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Random(Random: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.RandomType := Random;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Seconds(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.dynavars.t  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_StepSize(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then Begin
         ActiveCircuit.Solution.dynavars.h  := Value;
         Solution_Set_IntervalHrs(Value/3600.0);     // Keep IntervalHrs in synch with time step size
     End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Tolerance(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.ConvergenceTolerance  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Year(Value: Integer);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.Year  := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Solve();cdecl;
begin
  IF ActiveCircuit <> Nil THEN ActiveCircuit.Solution.Solve;
end;
//------------------------------------------------------------------------------
function Solution_Get_ModeID_AnsiString():AnsiString;inline;
begin
    If ActiveCircuit <> Nil Then Result := GetSolutionModeID
    ELSE Result := '';
end;

function Solution_Get_ModeID():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Solution_Get_ModeID_AnsiString());
end;
//------------------------------------------------------------------------------
function Solution_Get_LoadModel():Integer;cdecl;
begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.LoadModel
    ELSE Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_LoadModel(Value: Integer);cdecl;
begin

   If ActiveCircuit <> Nil Then  WITH ActiveCircuit.Solution Do Begin
      LoadModel := Value;
      DefaultLoadModel := LoadModel;
   End;

end;
//------------------------------------------------------------------------------
function Solution_Get_LDCurve_AnsiString():AnsiString;inline;
begin
     IF ActiveCircuit <> Nil Then Result := ActiveCircuit.LoadDurCurve
     ELSE Result := '';
end;
